# giva

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dados/classif/: nomenclatura_vigente_2026-07-02.json
docs/: decisoes.md  roadmap.md
docs/design_handoff_giva_operacao/: GIVA Operação.dc.html  README.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  client.ts  consultas.ts  lotes.ts  operacao.ts
frontend/src/components/: ComDica.module.css  ComDica.tsx  DemoBanner.module.css  DemoBanner.tsx  ProofOfOrigin.module.css  ProofOfOrigin.tsx  Ressalva.module.css  Ressalva.tsx  ResumoLote.module.css  ResumoLote.tsx  Selo.module.css  Selo.tsx  Sidebar.module.css  Sidebar.tsx  StatusBadge.module.css  StatusBadge.tsx  TopBar.module.css  TopBar.tsx  TourCard.module.css  TourCard.tsx  useMenuGlobal.ts
frontend/src/data/: ajuda.ts  copy.ts  demo.ts  demoConsultas.ts  parametros.ts  ressalvas.ts  statuses.json  statuses.ts
frontend/src/screens/: A2.module.css  A2.tsx  A3.module.css  A3.tsx  A4.module.css  A4.tsx  A5.module.css  A5.tsx  A6.module.css  A6.tsx  B1.tsx  B2.tsx  B3.tsx  B4.tsx  B5.tsx  Consultas.module.css  Consultas.tsx  (+6 more)
migrations/: env.py
migrations/versions/: 0001_schema_nucleo.py  0002_dados_referencia.py  0003_seed_demo_ncm.py  0004_operacao.py  0005_staging_cargas.py  0006_ncm_posicao.py  0007_role_readonly.py
scripts/: comparar_gabarito.py
src/giva/: armazenamento.py  auditoria.py  config.py
tests/: conftest.py  test_avaliador_similaridade.py  test_categorizador.py  test_consultas_integracao.py  test_consultas_sql_guard.py  test_contrato_statuses.py  test_ingestao_classif.py  test_leitor.py  test_pipeline.py  test_resolutor_ncm.py  test_staging_integracao.py  test_tabelas_decisao.py
(+47 files in other folders)
