[project]
name = "giva"
version = "0.1.0"
description = "GIVA — validação e enriquecimento de planilhas NCM/ICMS (análise retrospectiva de ICMS)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff", "mypy", "radon", "bandit", "pip-audit", "vulture", "mutmut"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "sistema: teste de sistema pesado (10 mil linhas) — só na pipeline noturna",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90"]
mccabe.max-complexity = 10   # as DTs existem para impedir funções-árvore-de-if

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = false

[[tool.mypy.overrides]]        # strict onde erro de tipo vira erro fiscal
module = ["giva.config", "giva.decisao.*", "giva.ncm.*", "giva.aliquota.*", "giva.categoria.*", "giva.similaridade.*", "giva.pipeline.*", "giva.saida.*", "giva.worker.*", "giva.rotinas.*"]
strict = true

[[tool.mypy.overrides]]        # psycopg/fastapi/pydantic/jwt/argon2/openpyxl não têm stubs
module = ["psycopg.*", "fastapi.*", "pydantic.*", "jwt.*", "argon2.*", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]        # decorators do FastAPI vêm sem stub (Any); evita vazar
module = ["giva.api.*"]        # disallow_*/warn_* de módulos strict para as rotas
disallow_untyped_decorators = false
disallow_any_generics = false
warn_return_any = false
disallow_subclassing_any = false

[tool.coverage.run]
source = ["src/giva"]
